# ompi

ompi/mca/mtl/ofi/: mtl_ofi_component.c  mtl_ofi_types.h
oshmem/mca/atomic/: atomic.h
oshmem/mca/atomic/ofi/: Makefile.am  atomic_ofi.h  atomic_ofi_atomicto.c  atomic_ofi_component.c  atomic_ofi_cswap.c  atomic_ofi_fadd.c  atomic_ofi_module.c  atomic_ofi_swap.c  configure.m4
oshmem/mca/memheap/: memheap.h
oshmem/mca/memheap/base/: memheap_base_frame.c  memheap_base_select.c
oshmem/mca/memheap/ptmalloc/: memheap_ptmalloc.c  memheap_ptmalloc.h
oshmem/mca/spml/base/: base.h
oshmem/mca/spml/ofshm/: Makefile.am  configure.m4  help-oshmem-spml-ofshm.txt  post_configure.sh  spml_ofshm.c  spml_ofshm.h  spml_ofshm_component.c  spml_ofshm_component.h
oshmem/runtime/: oshmem_shmem_init.c
oshmem/shmem/c/: shmem_add.c  shmem_inc.c  shmem_swap.c
